Fix: Horizontal Navbar On Mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -176,7 +176,7 @@ nav a:active {
   }
 
   nav {
-    flex-direction: column;
+    flex-direction: row;
     gap: 0.5rem;
   }
 }
